# pyschool-lib

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  package.md
package/: index.html
search/: search_index.json
src/pyacademy/: datasource.py  demo_cli.py
src/pyflix/: datasource.py  datasource_hacker.py  datasource_standard.py  datasource_xpert.py  media_db.py
src/pyflix/assets/: bbts12.csv  tv_shows.csv
src/pyflix/loaders/: file_helpers.py
src/pyflix/utils/: cli.py  rich_cli.py
tests/pyacademy/: test_students.py
