[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyschoollib"
version = "0.8.0"
dependencies = [
    "pytz",
]
authors = [
  { name="Darko Stankovski", email="darko.itpro@gmail.com" },
]
description = "A lib for my training courses"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/darko-itpro/pyschool-lib"
Issues = "https://github.com/darko-itpro/pyschool-lib/issues"

[tool.setuptools.packages.find]
where= ["src"]

[tool.setuptools.package-data]
"pyflix.assets" = ["*.csv"]

[project.optional-dependencies]
cli = ['rich', 'questionary']

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
    "tests",
]
pythonpath = [
  "src"
]
